css/style.css
/*
* Box Theme
* Created by : Ahmed Eissa
* website : www.ahmedessa.net
* behance : https://www.behance.net/3essa
*/


/* Table of Content
==================================================
	- Google fonts & font family -
	- General -
    - typography -
    - Preloader -
	- Header -
    - box intro section -
    - Portfoilo section -
    - Footer -
    - About page -
    - Services page -
    - contact page -
    - Portfolio single page -
    - Responsive media queries -
*/


/* Google fonts & font family
==================================================*/

@import url(https://fonts.googleapis.com/css?family=Poppins:400,500,600,700);

/* General
==================================================*/

html,
body {
    height: 100%;
    font-family: 'Poppins', sans-serif;
    line-height: 1.8;
    color: #999;
    background-image: url("../img/smoke-bg.jpg");
}

.no-padding {
    padding-left: 0;
    padding-right: 0;
}

.no-padding [class^="col-"] {
    padding-left: 0;
    padding-right: 0;
}

.main-container {
    padding: 100px 0;
}

.center {
    text-align: center;
}

a {
    -webkit-transition: all .3s;
    transition: all .3s
}

.uppercase {
    text-transform: uppercase;
}

.h-30 {
    height: 30px
}

.h-10 {
    height: 10px
}

.color {
    color: #ffbf00;
    font-size: 11px;
}


/* typography
==================================================*/

h1 {
    color: #393939;
    font-size: 60px;
    text-transform: uppercase;
}

h3 {
    color: #393939;
}

h5 {
    color: #ffbf00;
}


/* preloader
==================================================*/

#preloader {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #f5f5f5;
    /* change if the mask should be a color other than white */
    z-index: 1000;
    /* makes sure it stays on top */
}

.pre-container {
    position: absolute;
    left: 50%;
    top: 50%;
    bottom: auto;
    right: auto;
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
    text-align: center;
}

.spinner {
    width: 40px;
    height: 40px;
    position: relative;
    margin: 100px auto;
}

.double-bounce1,
.double-bounce2 {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background-color: #ffbf00;
    opacity: 0.6;
    position: absolute;
    top: 0;
    left: 0;
    -webkit-animation: bounce 2.0s infinite ease-in-out;
    animation: bounce 2.0s infinite ease-in-out;
}

.double-bounce2 {
    -webkit-animation-delay: -1.0s;
    animation-delay: -1.0s;
}

@-webkit-keyframes bounce {
    0%,
    100% {
        -webkit-transform: scale(0.0)
    }
    50% {
        -webkit-transform: scale(1.0)
    }
}

@keyframes bounce {
    0%,
    100% {
        transform: scale(0.0);
        -webkit-transform: scale(0.0);
    }
    50% {
        transform: scale(1.0);
        -webkit-transform: scale(1.0);
    }
}


/* headr
==================================================*/

.box-header {
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(255, 255, 255, 0.95);
    height: 50px;
    width: 100%;
    z-index: 3;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.box-header {
    height: 80px;
    background: transparent;
    box-shadow: none;
}

.box-header {
    -webkit-transition: background-color 0.3s;
    transition: background-color 0.3s;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

.box-header.is-fixed {
    position: fixed;
    top: -80px;
    background-color: rgba(255, 255, 255, 0.96);
    -webkit-transition: -webkit-transform 0.3s;
    transition: -webkit-transform 0.3s;
    transition: transform 0.3s;
    transition: transform 0.3s, -webkit-transform 0.3s;
}

.box-header.is-visible {
    -webkit-transform: translate3d(0, 100%, 0);
    transform: translate3d(0, 100%, 0);
}

.box-header.menu-is-open {
    background-color: rgba(255, 255, 255, 0.96);
}

.box-logo {
    display: block;
    padding: 20px;
}

.box-primary-nav-trigger {
    position: absolute;
    right: 0;
    top: 0;
    height: 100%;
    width: 50px;
    background-color: #fff;
}

.box-primary-nav-trigger .box-menu-text {
    color: #393939;
    text-transform: uppercase;
    font-weight: 700;
    display: none;
}

.box-primary-nav-trigger .box-menu-icon {
    display: inline-block;
    position: absolute;
    left: 50%;
    top: 50%;
    bottom: auto;
    right: auto;
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
    width: 18px;
    height: 2px;
    background-color: #393939;
    -webkit-transition: background-color 0.3s;
    transition: background-color 0.3s;
    list-style: none;
}

.box-primary-nav-trigger .box-menu-icon::before,
.box-primary-nav-trigger .box-menu-icon:after {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    background-color: #393939;
    right: 0;
    -webkit-transition: -webkit-transform .3s, top .3s, background-color 0s;
    -webkit-transition: top .3s, background-color 0s, -webkit-transform .3s;
    transition: top .3s, background-color 0s, -webkit-transform .3s;
    transition: transform .3s, top .3s, background-color 0s;
    transition: transform .3s, top .3s, background-color 0s, -webkit-transform .3s;
}

.box-primary-nav-trigger .box-menu-icon::before {
    top: -5px;
}

.box-primary-nav-trigger .box-menu-icon::after {
    top: 5px;
}

.box-primary-nav-trigger .box-menu-icon.is-clicked {
    background-color: rgba(255, 255, 255, 0);
}

.box-primary-nav-trigger .box-menu-icon.is-clicked::before,
.box-primary-nav-trigger .box-menu-icon.is-clicked::after {
    background-color: 393939;
}

.box-primary-nav-trigger .box-menu-icon.is-clicked::before {
    top: 0;
    -webkit-transform: rotate(135deg);
    transform: rotate(135deg);
}
/* ... */

